--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "parcel-bundler": "^1.12.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.6.0",
     "styled-components": "^4.3.2"
   }
 }
